# infinite-terrain

./: CMakeLists.txt  README.md  build_and_run.bat  imgui.ini
include/: glad.c
include/glad/: glad.h
shaders/: sky.frag  sky.vert  skybox.vert  terrain.frag  terrain.vert  vertex.glsl
src/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  Shader.cpp  Shader.h  SkyBox.cpp  SkyBox.h  Terrain.cpp  Terrain.h  TerrainCache.cpp  TerrainCache.h  TerrainChunk.cpp  TerrainChunk.h  TerrainGenerator.cpp  TerrainGenerator.h  TextureManager.h  World.cpp  World.h  main.cpp
